Bug 356419 - Custom notification location is not remembered after restart
Summary: Custom notification location is not remembered after restart
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: 5.5.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Martin Klapetek
URL:
Keywords:
: 356613 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-12-09 10:08 UTC by Robby Engelmann
Modified: 2016-01-07 04:02 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2015-12-09 10:08:30 UTC
I activated the custom location and set it to the upper right corner after I saw notifications coming up randomly at the lower left or lower right corner after I upgraded from 5.4. After each restart I have to set this again.

Reproducible: Always




Using plasma 5.5.0, Frameworks 5.16 and Qt5.5.1
Comment 1 Txutxifel 2015-12-09 10:45:58 UTC
Same here, Opensuse 42.1, plasma 5.5.0, Frameworks 5.16
Comment 2 Martin Klapetek 2015-12-09 19:08:05 UTC
Git commit 5c5bbc3f8c4297cfd6862072aa33a45d947fa41b by Martin Klapetek.
Committed on 09/12/2015 at 19:07.
Pushed by mklapetek into branch 'Plasma/5.5'.

[notifications] Move reading globalConfig() from ctor to init()

The globalConfig() in ctor returns a non-(yet-)existing KConfigGroup
which makes it always return the default value. So the config access
must be delayed for init().

Custom notification position is now correctly remembered.
FIXED-IN: 5.5.1

M  +7    -3    applets/notifications/lib/notificationsapplet.cpp
M  +1    -0    applets/notifications/lib/notificationsapplet.h

http://commits.kde.org/plasma-workspace/5c5bbc3f8c4297cfd6862072aa33a45d947fa41b
Comment 3 Martin Klapetek 2015-12-14 02:53:35 UTC
*** Bug 356613 has been marked as a duplicate of this bug. ***
Comment 4 Artur O. 2015-12-15 23:43:17 UTC
(In reply to Martin Klapetek from comment #2)
> Git commit 5c5bbc3f8c4297cfd6862072aa33a45d947fa41b by Martin Klapetek.
> Committed on 09/12/2015 at 19:07.
> Pushed by mklapetek into branch 'Plasma/5.5'.
> 
> [notifications] Move reading globalConfig() from ctor to init()
> 
> The globalConfig() in ctor returns a non-(yet-)existing KConfigGroup
> which makes it always return the default value. So the config access
> must be delayed for init().
> 
> Custom notification position is now correctly remembered.
> FIXED-IN: 5.5.1
> 
> M  +7    -3    applets/notifications/lib/notificationsapplet.cpp
> M  +1    -0    applets/notifications/lib/notificationsapplet.h
> 
> http://commits.kde.org/plasma-workspace/
> 5c5bbc3f8c4297cfd6862072aa33a45d947fa41b

There is a minor papercut currently with the saving.
Say you have custom position already saved; (top-right for this purpose)
 open settings and unselect "Use custom position...." and then select it together with a postion and apply. If you select the same position it wont save.
Comment 5 Martin Klapetek 2015-12-16 16:49:27 UTC
Thanks, I'll investigate.
Comment 6 Martin Klapetek 2016-01-07 04:02:05 UTC
That config issue should be fixed now; 5.5.4 should have the fix.