[notifications] Move reading globalConfig() from ctor to init()

The globalConfig() in ctor returns a non-(yet-)existing KConfigGroup
which makes it always return the default value. So the config access
must be delayed for init().

Custom notification position is now correctly remembered.

BUG: 356419
FIXED-IN: 5.5.1